@@ -620,8 +620,8 @@ static const char *dmi_processor_family(const struct dmi_header *h)
 		{ 0x11, "Pentium III" },
 		{ 0x12, "M1" },
 		{ 0x13, "M2" },
-		{ 0x14, "Celeron M" }, /* From CIM_Processor.Family */
-		{ 0x15, "Pentium 4 HT" }, /* From CIM_Processor.Family */
+		{ 0x14, "Celeron M" },
+		{ 0x15, "Pentium 4 HT" },
 
 		{ 0x18, "Duron" },
 		{ 0x19, "K5" },
@@ -639,10 +639,10 @@ static const char *dmi_processor_family(const struct dmi_header *h)
 		{ 0x25, "Power PC 620" },
 		{ 0x26, "Power PC x704" },
 		{ 0x27, "Power PC 750" },
-		{ 0x28, "Core Duo" }, /* From CIM_Processor.Family */
-		{ 0x29, "Core Duo Mobile" }, /* From CIM_Processor.Family */
-		{ 0x2A, "Core Solo Mobile" }, /* From CIM_Processor.Family */
-		{ 0x2B, "Atom" }, /* From CIM_Processor.Family */
+		{ 0x28, "Core Duo" },
+		{ 0x29, "Core Duo Mobile" },
+		{ 0x2A, "Core Solo Mobile" },
+		{ 0x2B, "Atom" },
 
 		{ 0x30, "Alpha" },
 		{ 0x31, "Alpha 21064" },
@@ -693,12 +693,12 @@ static const char *dmi_processor_family(const struct dmi_header *h)
 		{ 0x87, "Dual-Core Opteron" },
 		{ 0x88, "Athlon 64 X2" },
 		{ 0x89, "Turion 64 X2" },
-		{ 0x8A, "Quad-Core Opteron" }, /* From CIM_Processor.Family */
-		{ 0x8B, "Third-Generation Opteron" }, /* From CIM_Processor.Family */
-		{ 0x8C, "Phenom FX" }, /* From CIM_Processor.Family */
-		{ 0x8D, "Phenom X4" }, /* From CIM_Processor.Family */
-		{ 0x8E, "Phenom X2" }, /* From CIM_Processor.Family */
-		{ 0x8F, "Athlon X2" }, /* From CIM_Processor.Family */
+		{ 0x8A, "Quad-Core Opteron" },
+		{ 0x8B, "Third-Generation Opteron" },
+		{ 0x8C, "Phenom FX" },
+		{ 0x8D, "Phenom X4" },
+		{ 0x8E, "Phenom X2" },
+		{ 0x8F, "Athlon X2" },
 		{ 0x90, "PA-RISC" },
 		{ 0x91, "PA-RISC 8500" },
 		{ 0x92, "PA-RISC 8000" },
@@ -708,16 +708,16 @@ static const char *dmi_processor_family(const struct dmi_header *h)
 		{ 0x96, "PA-RISC 7100" },
 
 		{ 0xA0, "V30" },
-		{ 0xA1, "Quad-Core Xeon 3200" }, /* From CIM_Processor.Family */
-		{ 0xA2, "Dual-Core Xeon 3000" }, /* From CIM_Processor.Family */
-		{ 0xA3, "Quad-Core Xeon 5300" }, /* From CIM_Processor.Family */
-		{ 0xA4, "Dual-Core Xeon 5100" }, /* From CIM_Processor.Family */
-		{ 0xA5, "Dual-Core Xeon 5000" }, /* From CIM_Processor.Family */
-		{ 0xA6, "Dual-Core Xeon LV" }, /* From CIM_Processor.Family */
-		{ 0xA7, "Dual-Core Xeon ULV" }, /* From CIM_Processor.Family */
-		{ 0xA8, "Dual-Core Xeon 7100" }, /* From CIM_Processor.Family */
-		{ 0xA9, "Quad-Core Xeon 5400" }, /* From CIM_Processor.Family */
-		{ 0xAA, "Quad-Core Xeon" }, /* From CIM_Processor.Family */
+		{ 0xA1, "Quad-Core Xeon 3200" },
+		{ 0xA2, "Dual-Core Xeon 3000" },
+		{ 0xA3, "Quad-Core Xeon 5300" },
+		{ 0xA4, "Dual-Core Xeon 5100" },
+		{ 0xA5, "Dual-Core Xeon 5000" },
+		{ 0xA6, "Dual-Core Xeon LV" },
+		{ 0xA7, "Dual-Core Xeon ULV" },
+		{ 0xA8, "Dual-Core Xeon 7100" },
+		{ 0xA9, "Quad-Core Xeon 5400" },
+		{ 0xAA, "Quad-Core Xeon" },
 		{ 0xAB, "Dual-Core Xeon 5200" },
 		{ 0xAC, "Dual-Core Xeon 7200" },
 		{ 0xAD, "Quad-Core Xeon 7300" },
@@ -739,12 +739,12 @@ static const char *dmi_processor_family(const struct dmi_header *h)
 		{ 0xBD, "Core Solo" },
 		/* 0xBE handled as a special case */
 		{ 0xBF, "Core 2 Duo" },
-		{ 0xC0, "Core 2 Solo" }, /* From CIM_Processor.Family */
-		{ 0xC1, "Core 2 Extreme" }, /* From CIM_Processor.Family */
-		{ 0xC2, "Core 2 Quad" }, /* From CIM_Processor.Family */
-		{ 0xC3, "Core 2 Extreme Mobile" }, /* From CIM_Processor.Family */
-		{ 0xC4, "Core 2 Duo Mobile" }, /* From CIM_Processor.Family */
-		{ 0xC5, "Core 2 Solo Mobile" }, /* From CIM_Processor.Family */
+		{ 0xC0, "Core 2 Solo" },
+		{ 0xC1, "Core 2 Extreme" },
+		{ 0xC2, "Core 2 Quad" },
+		{ 0xC3, "Core 2 Extreme Mobile" },
+		{ 0xC4, "Core 2 Duo Mobile" },
+		{ 0xC5, "Core 2 Solo Mobile" },
 		{ 0xC6, "Core i7" },
 		{ 0xC7, "Dual-Core Celeron" },
 		{ 0xC8, "IBM390" },
@@ -768,12 +768,12 @@ static const char *dmi_processor_family(const struct dmi_header *h)
 		{ 0xDE, "Quad-Core Xeon 7xxx" },
 		{ 0xDF, "Multi-Core Xeon 7xxx" },
 
-		{ 0xE6, "Embedded Opteron Quad-Core" }, /* From CIM_Processor.Family */
-		{ 0xE7, "Phenom Triple-Core" }, /* From CIM_Processor.Family */
-		{ 0xE8, "Turion Ultra Dual-Core Mobile" }, /* From CIM_Processor.Family */
-		{ 0xE9, "Turion Dual-Core Mobile" }, /* From CIM_Processor.Family */
-		{ 0xEA, "Athlon Dual-Core" }, /* From CIM_Processor.Family */
-		{ 0xEB, "Sempron SI" }, /* From CIM_Processor.Family */
+		{ 0xE6, "Embedded Opteron Quad-Core" },
+		{ 0xE7, "Phenom Triple-Core" },
+		{ 0xE8, "Turion Ultra Dual-Core Mobile" },
+		{ 0xE9, "Turion Dual-Core Mobile" },
+		{ 0xEA, "Athlon Dual-Core" },
+		{ 0xEB, "Sempron SI" },
 
 		{ 0xFA, "i860" },
 		{ 0xFB, "i960" },
